# crescendo

./: .env.example  .gitignore  .gitmodules  BAND-BRIEF.md  DEMO-SCRIPT.md  LICENSE  PITCH-DECK.md  README.md  SUBMISSION.md  VOICEOVER.md  agents.py  brain_test.py  control.py  deploy_tools.py  docker-compose.build.yml  docker-compose.image.yml  docker-compose.yml  ledger.py  listen_band.py  maestro.py  memory_tools.py  orchestra.py  pyproject.toml  run_brain.sh  seed_skills.py  signing.py  smoke_band.py
.wrangler/cache/: pages.json  wrangler-account.json
dashboard/: Dockerfile  audit.html  flywheel.html  gen_replay.py  index.html  replay-data.js  replay.json  serve.py
docs/: CONCEPT.md  SPONSOR-FEEDBACK.md
tests/: test_ledger.py  test_orchestrator.py  test_signing.py
